--- a/prak pw/prak mg 6/form.css
+++ b/prak pw/prak mg 6/form.css
@@ -186,34 +186,35 @@ img{
 
 .tampilSec .box-tabel .kolom{
     border: 1px solid #003049;
-    display: inline-flex;
+    padding-left: 12px;
+    display: inline-block;
     position: relative;
     top: 50%;
     font-weight: 600;
 }
 
 .tampilSec .box-tabel .k-no{
-    width: 100px;
+    width: 50px;
 }
 
 .tampilSec .box-tabel .k-nrp{
-    width: 300px;
-}
-
-.tampilSec .box-tabel .k-nama{
-    width: 400px;
-}
-
-.tampilSec .box-tabel .k-gender{
     width: 200px;
 }
 
-.tampilSec .box-tabel .k-agama{
+.tampilSec .box-tabel .k-nama{
     width: 300px;
 }
 
+.tampilSec .box-tabel .k-gender{
+    width: 230px;
+}
+
+.tampilSec .box-tabel .k-agama{
+    width: 150px;
+}
+
 .tampilSec .box-tabel .k-umur{
-    width: 100px;
+    width: 90px;
 }
 
 .tampilSec .box-tabel .k-alamat{
