--- a/prak pw/prak mg 6/form.css
+++ b/prak pw/prak mg 6/form.css
@@ -161,7 +161,6 @@ img{
 /* TAMPIL.PHP------------ */
 .tampilSec{
     width: 100%;
-    padding: 0px 0px;
     background: rgba(0, 255, 255, 0.2);
 }
 
@@ -169,6 +168,7 @@ img{
     background: transparent;
     padding: 0 0;
     border: solid 2px grey;
+    width: 100%;
 }
 
 .tampilSec .box-main h1{
