--- a/prak pw/prak mg 6/form.css
+++ b/prak pw/prak mg 6/form.css
@@ -194,6 +194,7 @@ img{
     top: 50%;
     font-weight: 600;
     font-size: 13px;
+    width: 100%;
 }
 
 .tampilSec .box-tabel .k-no{
@@ -217,7 +218,7 @@ img{
 }
 
 .tampilSec .box-tabel .k-umur{
-    width: 90px;
+    width: 80px;
 }
 
 .tampilSec .box-tabel .k-alamat{
