--- a/prak pw/prak mg 6/form.css
+++ b/prak pw/prak mg 6/form.css
@@ -169,7 +169,7 @@ img{
     background: transparent;
     padding: 0 0;
     border: solid 2px grey;
-    width: 1500px;
+    width: 100%;
 }
 
 .tampilSec .box-main h1{
