modified:   prak pw/prak mg 6/form.css

--- a/prak pw/prak mg 6/form.css
+++ b/prak pw/prak mg 6/form.css
@@ -166,7 +166,7 @@ img{
 }
 
 .tampilSec .box-main{
-    background: transparent;
+    background: lightcoral;
     padding: 0 0;
     width: 100%;
 }
@@ -214,7 +214,7 @@ img{
 }
 
 .tampilSec .box-tabel .k-agama{
-    width: 185px;
+    width: 170px;
 }
 
 .tampilSec .box-tabel .k-umur{
