--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -7,8 +7,7 @@
 }
 
 body{
-    font-family: 'Poppins', sans-serif !important;
-    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
     color: #000;
     letter-spacing: 2px;
 }
@@ -24,11 +23,61 @@ img{
 .sec1{
     width: 100%;
     height: 100vh;
+    background-image: url("bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.sec1 .hero{
+    font-weight: 700;
+    position: absolute;
+    top: 30%;
+    transform: translateY(-30%);
+    color: #fff;
+    padding: 70px 70px;
+}
+
+.sec1 .hero p.judul{
+    font-size: 90px;
+    color: #fff;
+    letter-spacing: 3px;
+    text-shadow: 8px 8px 15px rgba(0,0,0,0.5);
+    margin-bottom: 0;
+}
+
+.sec1 .hero p.sub{
+    font-size: 18px;
+    margin-left: 1%;
+    margin-top: 0px;
+    color: #000;
+}
+
+.sec1 button.btn-main{
+    padding: 0.7rem .9rem;
+    letter-spacing: 5px;
+    border: 2px solid transparent;
+    border-radius: 6px;
+    background : rgb(0, 2, 104);
+    color: #fff;
+    transition: ease 0.3s;
+    margin-left: 1%;
+    margin-top: 1%;
+    font-weight: 700;
+}
+
+.sec1 button.btn-main:hover{
+    background : rgb(255, 174, 0);
+}
+
+.sec2{
+    width: 100%;
+    height: 100vh;
     background: #fff;
     padding: 40px 40px;
 }
 
-.sec1 .box{
+.sec2 .box{
     width: 80%;
     background: transparent;
     padding: 32px 32px;
@@ -37,31 +86,32 @@ img{
     border-radius: 15px;
     box-shadow: 0px 3px 50px rgba(0,0,0,0.2);
     position: relative;
-    left: 150px;
-    top: 0;
+    margin-left: 85px;
 }
 
-.sec1 p.judul{
+.sec2 p.judul{
     font-size: 32px;
     font-weight: bolder;
     letter-spacing: 5px;
     text-decoration-line: underline;
 }
 
-.sec1 img{
-    width: 550px;
-    height: 650px;
+.sec2 img{
+    width: 500px;
+    height: 600px;
     position: absolute;
-    bottom : 0;
-    left: -15%;
-    transform: translate(15%, 0);
+    top : 0;
+    left: -28%;
+    transform: translate(28%, 0);
 }
 
-.sec1 .col-9{
+.sec2 .col-9{
     padding-left: 85px;
 }
 
-.sec1 button.btn-main{
+.sec2 button#nextbtn,
+.sec2 button#submitbtn,
+.sec2 button#prevbtn{
     padding: 0.5rem 2.5rem;
     border: 1px solid transparent;
     border-radius: 8px;
@@ -77,25 +127,46 @@ img{
     transform: translate(-50%, -2%);
 }
 
-.sec1 input,
-.sec1 textarea{
+.sec2 input,
+.sec2 textarea{
     letter-spacing: 2px;
     border: 1px solid grey;
-    font-size: 13px;
 }
 
-.sec1 option{
-    font-size: 13px;
+.sec2 textarea{
+    font-size: 14px;
 }
 
-.sec1 .circle1,
-.sec1 .circle2,
-.sec1 .circle3{
+.sec2 .hide-form{
+    display: none;
+}
+
+.sec2 .show-form{
+    display: block;
+}
+
+.sec2 button#submitbtn,
+.sec2 button#prevbtn{
+    position: relative;
+    left: 35%;
+    display: inline-flex;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.sec2 button#submitbtn{
+    padding: .5rem 1.8rem;
+    margin-left: 60px;
+}
+
+.sec2 .circle1,
+.sec2 .circle2,
+.sec2 .circle3{
     background: rgb(0, 2, 104);
     position: absolute;
 }
 
-.sec1 .circle1{
+.sec2 .circle1{
     border-radius: 8px;
     width: 215px;
     height: 90px;
@@ -104,12 +175,12 @@ img{
     transform: translate(-2%, -7%);
     padding: 15px 15px;
     text-align: justify;
-    font-size: 12px !important;
+    font-size: 12px;
     color: #fff;
     font-weight: 700;
 }
 
-.sec1 .circle2{
+.sec2 .circle2{
     border-radius: 50%;
     width: 20px;
     height: 20px;
@@ -118,7 +189,7 @@ img{
     transform: translate(-18%, -18%);
 }
 
-.sec1 .circle3{
+.sec2 .circle3{
     border-radius: 50%;
     width: 15px;
     height: 15px;
@@ -127,38 +198,7 @@ img{
     transform: translate(-19.5%, -20%);
 }
 
-/* ISI.PHP--------- */
-.isi-sec{
-    width: 100%;
-    height: 100vh;
-    padding: 40px 40px;
-    background: #06d6a0;
-    position: relative;
-}
-
-.isi-sec h1{
-    font-size: 42px;
-    color: #fff;
-    font-weight: bolder;
-    text-align: center !important;
-}
-
-.isi-sec button.show{
-    padding: 0.5rem 2.5rem;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    letter-spacing: 1px;
-    background: #1b4332;
-    transition: ease 0.3s;
-    color: #fff;
-    font-weight: 700;
-    margin-top: 32px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-/* TAMPIL.PHP------------ */
+/* MENAMPILKAN TABEL */
 .tampilSec{
     width: 100%;
     padding: 24px 24px;
@@ -182,7 +222,7 @@ img{
 
 .tampilSec .box-main .box-tabel{
     background: #fff;
-    box-shadow: 0px 3px 50px rgba(0,0,0,0.2);
+    box-shadow: 0px 5px 30px rgba(0,0,0,0.2);
 }
 
 .tampilSec .box-tabel .kolom{
@@ -213,16 +253,12 @@ img{
     width: 140px;
 }
 
-.tampilSec .box-tabel .k-agama{
-    width: 170px;
+.tampilSec .box-tabel .k-jurusan{
+    width: 200px;
 }
 
-.tampilSec .box-tabel .k-umur{
-    width: 80px;
-}
-
-.tampilSec .box-tabel .k-alamat{
-    width: 380px;
+.tampilSec .box-tabel .k-ipk{
+    width: 95px;
 }
 
 .tampilSec .box-tabel .k-edit{
@@ -253,23 +289,26 @@ img{
     transform: translateX(-50%);
 }
 
-/* DETAIL TAMPIL --------- */
-.detailTampil{
+
+
+
+/* DETAIL TAMPIL----- */
+/* .tampilSec{
     width: 100%;
     height: 100vh;
     padding: 40px 40px;
 }
 
-.detailTampil img.man-tampil{
+.tampilSec img.man-tampil{
     width: 400px;
     height: 650px;
     left: 19%;
     transform: translateX(-19%);
 }
 
-.detailTampil .tampil-box{
+.tampilSec .tampil-box{
     width: 70%;
-    background: rgba(0, 255, 255, 0.1);
+    background: #dde1fc;
     padding: 32px 32px;
     padding-left: 24px;
     border-radius: 10px;
@@ -279,46 +318,46 @@ img{
     transform: translate(-3%,-50%);
 }
 
-.detailTampil .bulat{
+.tampilSec .bulat{
     background: #fff;
     border-radius: 50%;
-    width: 250px !important;
-    height: 250px !important;
+    width: 250px;
+    height: 250px;
     left: 0;
     top: 50%;
     transform: translate(0%, -50%);
 }
 
-.detailTampil img.me{
-    width: 200px !important;
-    height: 320px !important;
+.tampilSec img.me{
+    width: 200px;
+    height: 320px;
     left: -10%;
     bottom: 22%;
     transform: translate(10%, -22%);
 }
 
-.detailTampil .col-6{
+.tampilSec .col-6{
     padding: 32px 32px;
     padding-left: 24px;
 }
 
-.detailTampil p.halo{
-    font-weight: bolder !important;
+.tampilSec p.halo{
+    font-weight: bolder;
     font-size: 36px;
     color: rgb(0, 2, 99);
     text-align: center;
 }
 
-.detailTampil p.labelnya{
+.tampilSec p.labelnya{
     font-size: 16px;
     font-weight: bolder;
-    color: rgb(0, 2, 117) !important;
+    color: rgb(0, 2, 117);
 }
 
-.detailTampil p.isi{
-    font-size: 14px !important;
+.tampilSec p.isi{
+    font-size: 14px;
     font-weight: 500;
     color: rgb(0, 2, 94);
     text-align: justify;
     word-wrap: break-word;
-}
+} */
