modified:   prak pw/uts proyek/form.css

--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -96,6 +96,10 @@ img{
     display: block;
 }
 
+.sec2 button#nextbtn{
+    margin-top: 10px;
+}
+
 .sec2 button#submitbtn,
 .sec2 button#prevbtn{
     position: relative;
