--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -244,32 +244,22 @@ img{
 
 
 /* DETAIL TAMPIL----- */
-/* .tampilSec{
+.detail-tampil{
     width: 100%;
     height: 100vh;
     padding: 40px 40px;
+    background: rgba(0, 255, 255, 0.2);
 }
 
-.tampilSec img.man-tampil{
-    width: 400px;
-    height: 650px;
-    left: 19%;
-    transform: translateX(-19%);
-}
-
-.tampilSec .tampil-box{
-    width: 70%;
-    background: #dde1fc;
+.detail-tampil .tampil-box{
+    background: #fff;
     padding: 32px 32px;
     padding-left: 24px;
     border-radius: 10px;
     box-shadow: 0px 3px 50px rgba(0,0,0,0.2);
-    right: 3%;
-    top: 50%;
-    transform: translate(-3%,-50%);
 }
 
-.tampilSec .bulat{
+.detail-tampil .bulat{
     background: #fff;
     border-radius: 50%;
     width: 250px;
@@ -279,7 +269,7 @@ img{
     transform: translate(0%, -50%);
 }
 
-.tampilSec img.me{
+.detail-tampil img.me{
     width: 200px;
     height: 320px;
     left: -10%;
@@ -287,28 +277,28 @@ img{
     transform: translate(10%, -22%);
 }
 
-.tampilSec .col-6{
+.detail-tampil .col-6{
     padding: 32px 32px;
     padding-left: 24px;
 }
 
-.tampilSec p.halo{
+.detail-tampil p.halo{
     font-weight: bolder;
     font-size: 36px;
     color: rgb(0, 2, 99);
     text-align: center;
 }
 
-.tampilSec p.labelnya{
+.detail-tampil p.labelnya{
     font-size: 16px;
     font-weight: bolder;
     color: rgb(0, 2, 117);
 }
 
-.tampilSec p.isi{
+.detail-tampil p.isi{
     font-size: 14px;
     font-weight: 500;
     color: rgb(0, 2, 94);
     text-align: justify;
     word-wrap: break-word;
-} */
+}
