modified:   uts proyek/del_data.php 	modified:   uts proyek/detail_tampil.php 	modified:   uts proyek/form.css 	modified:   uts proyek/update_data.php

--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -252,7 +252,7 @@ img{
 }
 
 .detail-tampil .tampil-box{
-    background: #fff;
+    background: rgba(188, 255, 255, 0.2);
     padding: 32px 32px;
     padding-left: 24px;
     border-radius: 10px;
