--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -252,15 +252,20 @@ img{
 
 .detail-tampil .tampil-box{
     background: #fff;
-    padding: 32px 32px;
+    padding: 40px 40px;
     padding-left: 24px;
     border-radius: 10px;
     box-shadow: 0px 3px 50px rgba(0,0,0,0.2);
 }
 
+.detail-tampil .row{
+    border: 1px solid salmon;
+}
+
 .detail-tampil .col-6{
     padding: 32px 32px;
-    padding-left: 24px;
+    padding-left: 40px;
+    border: black;
 }
 
 .detail-tampil p.halo{
