--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -252,8 +252,7 @@ img{
 
 .detail-tampil .tampil-box{
     background: #fff;
-    padding: 40px 40px;
-    padding-left: 24px;
+    padding: 32px 32px;
     border-radius: 10px;
     box-shadow: 0px 3px 50px rgba(0,0,0,0.2);
 }
@@ -265,7 +264,7 @@ img{
 .detail-tampil .col-6{
     padding: 32px 32px;
     padding-left: 40px;
-    border: black;
+    border: black 1px solid;
 }
 
 .detail-tampil p.halo{
