--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -257,14 +257,8 @@ img{
     box-shadow: 0px 3px 50px rgba(0,0,0,0.2);
 }
 
-.detail-tampil .row{
-    border: 1px solid salmon;
-}
-
 .detail-tampil .col-6{
     padding: 32px 32px;
-    padding-left: 40px;
-    border: black 1px solid;
 }
 
 .detail-tampil p.halo{
@@ -272,6 +266,8 @@ img{
     font-size: 36px;
     color: rgb(0, 2, 99);
     text-align: center;
+    text-decoration-line: underline;
+    line-height: 3px;
 }
 
 .detail-tampil p.labelnya{
