--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -253,6 +253,7 @@ img{
 .detail-tampil .tampil-box{
     background: #fff;
     padding: 40px 40px;
+    padding-bottom: 24px;
     border-radius: 10px;
     box-shadow: 0px 3px 50px rgba(0,0,0,0.2);
     position: relative;
