modified:   uts proyek/detail_tampil.php 	modified:   uts proyek/form.css 	new file:   uts proyek/me.jpeg

--- a/prak pw/uts proyek/form.css
+++ b/prak pw/uts proyek/form.css
@@ -261,6 +261,11 @@ img{
     transform: translateY(-50%);
 }
 
+.detail-tampil img.me{
+    width: 400px;
+    height: 600px;
+}
+
 .detail-tampil .col-6{
     padding: 40px 40px;
 }
