modified:   asset/css/main.css 	modified:   login.php

--- a/prak pw/prak mg 9/asset/css/main.css
+++ b/prak pw/prak mg 9/asset/css/main.css
@@ -76,6 +76,10 @@ img{
     background: #ff724f;
 }
 
+.login-sec h5 a{
+    color: rgb(100, 162, 255);
+}
+
 
 /* REGIST.PHP---------- */
 .regist-sec{
