modified:   asset/css/main.css 	modified:   login.php

--- a/prak pw/prak mg 9/asset/css/main.css
+++ b/prak pw/prak mg 9/asset/css/main.css
@@ -76,7 +76,12 @@ img{
     background: #ff724f;
 }
 
-.login-sec h5 a{
+.login-sec h6{
+    font-size: 12px;
+}
+
+.login-sec h6 a{
+    font-size: 12px;
     color: rgb(100, 162, 255);
 }
 
