--- a/prak pw/prak mg 9/asset/css/main.css
+++ b/prak pw/prak mg 9/asset/css/main.css
@@ -24,7 +24,7 @@ img{
 .login-sec{
     width: 100%;
     height: 100vh;
-    background-image: url("/asset/img/bg_login.jpg");
+    background-image: url("/asset/img/bg_login.jpg") !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -92,7 +92,7 @@ img{
 .regist-sec{
     width: 100%;
     height: 100vh;
-    background-image: url("/asset/img/bg_login.jpg");
+    background-image: url("/asset/img/bg_login.jpg") !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
