--- a/prak pw/prak mg 9/asset/css/main.css
+++ b/prak pw/prak mg 9/asset/css/main.css
@@ -24,7 +24,7 @@ img{
 .login-sec{
     width: 100%;
     height: 100vh;
-    background-image: url(".../bg_login.jpg") !important;
+    background-image: url("../img/bg_login.jpg") !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -92,7 +92,7 @@ img{
 .regist-sec{
     width: 100%;
     height: 100vh;
-    background-image: url(".../bg_login.jpg") !important;
+    background-image: url("../img/bg_login.jpg") !important;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -171,9 +171,126 @@ img{
 
 
 /* MAIN.PHP----------- */
-.main-sec{
+.home-sec{
     width: 100%;
     height: 100vh;
+    background: #F5FAFF;
     padding: 0 0;
 }
 
+.home-sec .logo{
+    width: 150px;
+    height: 70px;
+    position: relative;
+    left: 40%;
+    transform: translateX(-40%);
+}
+
+.home-sec box{
+    padding: 0 0;
+    border: 1px solid black;
+    height: 100vh;
+    width: 100%;
+}
+
+.home-sec .sidebar{
+    background: #e7532e;
+    color: #FFF;
+    padding-top: 25px;
+    padding-left: 12px;
+    padding-right: 0;
+    width: 300px;
+    height: 100vh;
+    position: absolute;
+}
+
+.home-sec ul{
+    margin-top: 2rem;
+    padding:  0 0;
+}
+
+.home-sec li{
+    list-style: none;
+    width: 100%;
+    margin-bottom: 2rem;
+    padding-left: .5rem;
+}
+
+.home-sec li a{
+    font-weight: 600;
+    color: #F5FAFF;
+    display: block;
+    letter-spacing: 2px;
+}
+
+.home-sec li a span{
+    font-size: 14px;
+    padding-left: 1rem;
+}
+
+.home-sec li a.active{
+    background: #FFF;
+    color: #001833;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-radius: 50px 0 0 50px;
+}
+
+.home-sec li a.active:hover{
+    color: #001833;
+    text-decoration: none;
+}
+
+.home-sec li a:hover{
+    color: #001833;
+    text-decoration: none;
+}
+
+.home-sec .sidebar-menu span{
+    display: inline-block;
+}
+
+.home-sec li a span:first-child{
+    font-size: 1.1rem;
+}
+
+.home-sec .box{
+    display: inline-block;
+    /* background: grey; */
+    margin-left: 300px;
+}
+
+.home-sec .nav-header{
+    background: salmon;
+}
+
+.home-sec .main-content {
+    margin-left:310px;
+    padding-top: .5rem;
+    margin-right: 10px;
+}
+
+.home-sec header {
+    display: flex;
+    background: #001833;
+    justify-content: space-between;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.2);
+    height: 60px;
+    color: #F5FAFF;
+}
+
+.home-sec h6{
+    font-size: 20px;
+}
+
+.home-sec header p{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.home-sec header a{
+    color: #F5FAFF;
+    font-weight: 500;
+}
