--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -352,19 +352,18 @@ p.petunjuk{
 }
 
 .home-sec .content-datugas{
-    padding: 32px 32px;
+    padding: 0 0;
     margin-top: 24px;
-    box-shadow: 4px 4px 10px rgba(0,0,0,0.2);
-    border-radius: 10px;
 }
 
 .home-sec .content-datugas .card{
-    padding: 22px 22px;
+    padding: 20px 20px;
     color: #F5FAFF;
 }
 
 .home-sec .content-datugas .card1{
     background: #001833;
+    padding: 12px 12px;
 }
 
 .show{
