--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -359,13 +359,14 @@ p.petunjuk{
 .home-sec .content-datugas .card{
     padding: 12px 12px;
     background: transparent;
+    border: none;
 }
 
 .home-sec .content-datugas .card1{
-    background: #001833;
+    background: #004a9e;
     padding: 20px 20px;
     color: #F5FAFF;
-    border-radius: 8px;
+    border-radius: 12px;
 }
 
 .show{
