--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -367,6 +367,7 @@ p.petunjuk{
 .home-sec .content-datugas .card3{
     padding: 20px 20px;
     border-radius: 11px;
+    height: 300px;
 }
 
 .home-sec .content-datugas .card1{
