modified:   asset/css/main.css

--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -194,7 +194,7 @@ img{
 }
 
 .home-sec .sidebar{
-    background: #e7532e;
+    background: #fca311;
     color: #FFF;
     padding-top: 25px;
     padding-left: 12px;
@@ -371,17 +371,17 @@ p.petunjuk{
 }
 
 .home-sec .content-datugas .card1{
-    background: #004a9e;
+    background: #00bbf9;
     color: #F5FAFF;
 }
 
 .home-sec .content-datugas .card2{
-    background: salmon;
+    background: #00f5d4;
     color: #F5FAFF;
 }
 
 .home-sec .content-datugas .card3{
-    background: green;
+    background: #9b5de5;
     color: #F5FAFF;
 }
 
