--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -411,11 +411,13 @@ p.petunjuk{
     padding: 5px 5px;
     font-size: 10px;
     border-radius: 3px;
+    margin-left: 0;
 }
 
 .home-sec .content-datugas span.deadline{
     font-size: 10px;
     font-weight: 600;
+    margin-right: 0;
 }
 
 .home-sec .content-datugas .box-status{
