--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -400,7 +400,7 @@ p.petunjuk{
 .home-sec .content-datugas span.deadline{
     font-size: 10px;
     font-weight: 600;
-    margin-right: 0px;
+    margin-left: 12px;
 }
 
 .home-sec .content-datugas .box-status{
