--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -395,6 +395,7 @@ p.petunjuk{
     padding: 5px 5px;
     font-size: 10px;
     border-radius: 3px;
+    width: 80px;
 }
 
 .home-sec .content-datugas span.deadline{
