modified:   asset/css/main.css

--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -400,10 +400,10 @@ p.petunjuk{
 .home-sec .content-datugas span.deadline{
     font-size: 10px;
     font-weight: 600;
-    margin-left: 32px;
 }
 
 .home-sec .content-datugas .box-status{
+    justify-content: space-between;
     background: transparent;
     padding: 0 0;
 }
