modified:   asset/css/main.css

--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -403,6 +403,7 @@ p.petunjuk{
 }
 
 .home-sec .content-datugas .box-status{
+    display: flex;
     justify-content: space-between;
     background: transparent;
     padding: 0 0;
