modified:   asset/css/main.css

--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -400,6 +400,9 @@ p.petunjuk{
 .home-sec .content-datugas span.deadline{
     font-size: 10px;
     font-weight: 600;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .home-sec .content-datugas .box-status{
