modified:   asset/css/main.css 	modified:   data_tugas2.php 	new file:   upload_tugas.php

--- a/prak pw/prak mg 9 & 12/asset/css/main.css
+++ b/prak pw/prak mg 9 & 12/asset/css/main.css
@@ -377,7 +377,7 @@ p.petunjuk{
     margin-top: 12px;
 }
 
-.home-sec .content-datugas2 button{
+.home-sec .content-datugas2 button.btn-success{
     padding: .4rem 1.1rem;
     border: 1px solid transparent;
     border-radius: 5px;
@@ -389,16 +389,26 @@ p.petunjuk{
     transform: translateX(-50%);
 }
 
-.home-sec .content-datugas2 button .fa-send{
+.home-sec .content-datugas2 button.btn-main{
+    padding: .4rem 1.1rem;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    transition: ease 0.3s;
+}
+
+.home-sec .content-datugas2 button.btn-success .fa-send,
+.home-sec .content-datugas2 button.btn-main .fa-download{
     margin-right: 12px;
 }
 
-.home-sec .content-datugas2 button:hover .fa-send::before{
+.home-sec .content-datugas2 button.btn-success:hover .fa-send::before,
+.home-sec .content-datugas2 button.btn-main:hover .fa-download::before{
     margin-right: 12px;
     transition: ease 0.3s;
 }
 
-.home-sec .content-datugas2 button:hover .fa-send::after{
+.home-sec .content-datugas2 button.btn-success:hover .fa-send::after,
+.home-sec .content-datugas2 button.btn-main:hover .fa-download::after{
     margin-right: 24px;
     transition: ease 0.3s;
 }
